[gd_scene load_steps=21 format=2]

[ext_resource path="res://Texture/Sprite/Golem.png" type="Texture" id=1]
[ext_resource path="res://Script/Golem.gd" type="Script" id=2]
[ext_resource path="res://SFX/rock_smash.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Attack",
"speed": 1.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Hurt",
"speed": 1.0
} ]

[sub_resource type="Animation" id=9]
resource_name = "Attack"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Hurt" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Idle"

[sub_resource type="AnimationNodeTransition" id=16]
input_count = 2
input_0/name = "Idle"
input_0/auto_advance = false
input_1/name = "Attack"
input_1/auto_advance = false

[sub_resource type="AnimationNodeTransition" id=17]
input_count = 2
input_0/name = "Alive"
input_0/auto_advance = false
input_1/name = "Hurt"
input_1/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id=8]
graph_offset = Vector2( -437.673, 88.3333 )
nodes/Attack/node = SubResource( 13 )
nodes/Attack/position = Vector2( 0, 240 )
nodes/Hurt/node = SubResource( 14 )
nodes/Hurt/position = Vector2( 200, 400 )
nodes/Idle/node = SubResource( 15 )
nodes/Idle/position = Vector2( 0, 100 )
nodes/alive_transition/node = SubResource( 16 )
nodes/alive_transition/position = Vector2( 200, 200 )
nodes/output/position = Vector2( 600, 200 )
nodes/state/node = SubResource( 17 )
nodes/state/position = Vector2( 400, 200 )
node_connections = [ "state", 0, "alive_transition", "state", 1, "Hurt", "output", 0, "state", "alive_transition", 0, "Idle", "alive_transition", 1, "Attack" ]

[node name="Golem" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
animation = "Idle"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/Attack = SubResource( 9 )
anims/Hurt = SubResource( 10 )
anims/Idle = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="WavePosition" type="Position2D" parent="."]
position = Vector2( -13, 0 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimatedSprite/AnimationPlayer")
active = true
parameters/alive_transition/current = 0
parameters/state/current = 0

[node name="AttackSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 4.76837e-07, 4.76837e-07 )
scale = Vector2( 2.4, 2.4 )
physics_process_parent = true

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
